--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,20 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.container-imagens {
+    position: relative;
+}
+
 .img-celular {
     width: 450px;
+    margin-right: 80px;
+}
+
+.imagem-celular {
+    height: 525px;
+    position: absolute;
+    left: 151px;
+    top: 24px;
 }
 
 .insta-logo {
@@ -53,16 +65,25 @@ button {
     color: #ffffff;
     margin-top: 20px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .login-facebook {
     color: #385185;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
     text-align: center;
     margin-top: -5px;
     margin-bottom: 20px;
     cursor: pointer;
     font-size: 15px;
+}
+
+.logo-face {
+    width: 35px;
+    height: auto;
 }
 
 .esqueceu-senha {
@@ -120,6 +141,25 @@ button {
 }
 
 .paragrafo-app {
-    
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.container-app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo-ios {
+    width: 170px;
+    height: auto;
+}
+
+.logo-android {
+    width: 175px;
+    height: auto;
 }
 
